--- a/styles/globals.css
+++ b/styles/globals.css
@@ -92,7 +92,7 @@ html {
   }
 
   .nav-link.active {
-    @apply text-jacarta-700 after:bg-accent after:absolute after:inset-x-0 after:-bottom-px after:block after:h-[2px] after:w-full dark:text-white dark:hover:text-white;
+    @apply text-jacarta-700 after:bg-accent after:absolute after:inset-x-0 after:-bottom-px after:block after:h-[2px] after:w-full  dark:hover:text-white;
   }
 
   .tabs li {
@@ -260,7 +260,7 @@ html {
 
   /* Tabs */
   .nav-link.active {
-    @apply text-jacarta-700 after:bg-accent after:absolute after:inset-x-0 after:-bottom-px after:block after:h-[2px] after:w-full dark:text-white dark:hover:text-white;
+    @apply text-jacarta-700 after:bg-accent after:absolute after:inset-x-0 after:-bottom-px after:block after:h-[2px] after:w-full  dark:hover:text-white;
   }
 
   .tab-content > .tab-pane {
@@ -293,15 +293,15 @@ html {
   }
 
   .modal-content {
-    @apply dark:bg-jacarta-700 pointer-events-auto relative mx-4 flex flex-col rounded-2xl bg-white bg-clip-padding outline-0;
+    @apply pointer-events-auto relative mx-4 flex flex-col rounded-2xl bg-white bg-clip-padding outline-0;
   }
 
   .modal-header {
-    @apply dark:border-jacarta-600 border-jacarta-100 flex shrink-0 items-center justify-between border-b p-6;
+    @apply border-jacarta-100 flex shrink-0 items-center justify-between border-b p-6;
   }
 
   .modal-title {
-    @apply font-display text-jacarta-700 mb-0 mt-1 text-xl font-semibold leading-normal dark:text-white;
+    @apply font-display text-jacarta-700 mb-0 mt-1 text-xl font-semibold leading-normal;
   }
 
   .btn-close {
@@ -396,11 +396,7 @@ html {
   .article-content > h4,
   .article-content > h5,
   .article-content > h6 {
-    @apply text-jacarta-700 font-display !mt-12 mb-4 dark:text-white;
-  }
-
-  .article-content > p {
-    @apply dark:text-jacarta-300;
+    @apply text-jacarta-700 font-display !mt-12 mb-4;
   }
 
   /* Alerts */
@@ -3981,11 +3977,6 @@ html {
   .dark .article-content > h6 {
     --tw-text-opacity: 1;
     color: rgba(255, 255, 255, var(--tw-text-opacity));
-  }
-
-  .dark .article-content > p {
-    --tw-text-opacity: 1;
-    color: rgba(161, 162, 179, var(--tw-text-opacity));
   }
 
   .alert-error {
