--- a/styles/globals.css
+++ b/styles/globals.css
@@ -92,7 +92,7 @@ html {
   }
 
   .nav-link.active {
-    @apply text-jacarta-700 after:bg-accent after:absolute after:inset-x-0 after:-bottom-px after:block after:h-[2px] after:w-full  dark:hover:text-white;
+    @apply text-jacarta-700 after:bg-accent after:absolute after:inset-x-0 after:-bottom-px after:block after:h-[2px] after:w-full;
   }
 
   .tabs li {
@@ -158,14 +158,6 @@ html {
   .scrollbar-custom::-webkit-scrollbar {
     overflow: overlay;
     @apply h-2 w-2;
-  }
-
-  .scrollbar-custom::-webkit-scrollbar-track {
-    @apply: bg-jacarta-100 dark: bg-jacarta-800;
-  }
-
-  .scrollbar-custom::-webkit-scrollbar-thumb {
-    @apply bg-jacarta-300 dark:bg-jacarta-600 rounded-lg;
   }
 
   /* Dropdowns */
@@ -260,7 +252,7 @@ html {
 
   /* Tabs */
   .nav-link.active {
-    @apply text-jacarta-700 after:bg-accent after:absolute after:inset-x-0 after:-bottom-px after:block after:h-[2px] after:w-full  dark:hover:text-white;
+    @apply text-jacarta-700 after:bg-accent after:absolute after:inset-x-0 after:-bottom-px after:block after:h-[2px] after:w-full;
   }
 
   .tab-content > .tab-pane {
