--- a/pages/css/Checkmark.css
+++ b/pages/css/Checkmark.css
@@ -1,7 +1,5 @@
 .success-checkmark {
-  width: 80px;
-  height: 115px;
-  margin: 0 auto;
+  margin: auto;
 }
 .success-checkmark .check-icon {
   width: 80px;
