--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,7 +29,6 @@ html {
     top: 100%; /* Position the dropdown menu below the button */
     left: 0; /* Align the left edge of the dropdown menu with the button's left edge */
     margin: 0px;
-    min-width: 14rem; /* Set the minimum width of the dropdown menu */
     z-index: 10; /* Ensure the dropdown menu appears on top of other elements */
   }
   @media (min-width: 1200px) {
@@ -1404,7 +1403,17 @@ html {
   .mr-2\.5 {
     margin-right: 0.625rem;
   }
-
+  /* Media query for smaller screens */
+  @media (max-width: 600px) {
+    .mr-2\.5 {
+      margin-right: 0.3125rem !important; /* Adjust the margin size for smaller screens */
+    }
+  }
+  @media (max-width: 360px) {
+    .mr-2\.5 {
+      margin-right: 0.1125rem !important; /* Adjust the margin size for smaller screens */
+    }
+  }
   .mb-2\.5 {
     margin-bottom: 0.625rem;
   }
@@ -2590,9 +2599,13 @@ html {
   .border-brand {
     border-color: #6cb960 !important;
   }
-  .bg-accent {
+  .bg-brand2 {
     --tw-bg-opacity: 1;
-    background-color: rgba(131, 88, 255, var(--tw-bg-opacity));
+    background-color: #99e35f;
+  }
+  .styledBlockquote {
+    position: relative;
+    z-index: 1;
   }
 
   .bg-jacarta-100 {
@@ -5625,6 +5638,7 @@ html {
 .tooltip-container {
   background: transparent !important;
   position: relative;
+  margin-right: 10rem !important;
   z-index: 99999;
 }
 
